--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+configobj (4.7.3-1pb2) stable; urgency=low
+
+  * Build for squeeze
+
+ -- Frank Brehm <frank.brehm@profitbricks.com>  Fri, 04 Jul 2014 13:15:22 +0200
+
 configobj (4.7.3-1pb1) wheezy; urgency=low
 
   * Build for Wheezy
