--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+configobj (4.7.3-2pb1) wheezy trusty utopic; urgency=medium
+
+  * Changed source format to '3.0 (native)'
+  * Some adjustments in debian/control
+
+ -- Frank Brehm <frank.brehm@profitbricks.com>  Wed, 23 Sep 2015 11:57:58 +0200
+
 configobj (4.7.3-1pb4) wheezy trusty utopic; urgency=medium
 
   * Non maintainer upload
